Upgrade to latest spring boot, and add a simple test for controller
