# hottub/src/main/java/ax/dkarlsso/hottub/controller/api/SettingsController.java
@@ -2,7 +2,7 @@ package ax.dkarlsso.hottub.controller.api;
 
 import ax.dkarlsso.hottub.interfaces.model.hottub_api.Settings;
 import ax.dkarlsso.hottub.service.OperationsService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -14,13 +14,9 @@ import java.time.Duration;
  */
 @RestController
 @RequestMapping("/api")
+@AllArgsConstructor
 public class SettingsController implements ax.dkarlsso.hottub.interfaces.api.hottub_api.SettingsApi {
     private final OperationsService operationsService;
-
-    @Autowired
-    public SettingsController(final OperationsService operationsService) {
-        this.operationsService = operationsService;
-    }
 
     @Override
     public ResponseEntity<Settings> getSettings() {
@@ -30,13 +26,6 @@ public class SettingsController implements ax.dkarlsso.hottub.interfaces.api.hot
 
     @Override
     public ResponseEntity<Settings> updateSettings(final Settings settings) {
-        if(settings.getTemperatureLimit() < 5 && settings.getTemperatureLimit() > 45) {
-            throw new IllegalArgumentException("Invalid bounds of temperature: " + settings.getTemperatureLimit());
-        }
-        if (settings.getHeatingPanTemperatureLimit() > 61 && settings.getHeatingPanTemperatureLimit() < 15) {
-            throw new IllegalArgumentException("Invalid bounds of temperature: " + settings.getHeatingPanTemperatureLimit());
-        }
-
         operationsService.updateSettings(ax.dkarlsso.hottub.model.settings.Settings.builder()
                 .hottubTemperatureLimit(settings.getTemperatureLimit())
                 .temperatureDiff(settings.getTemperatureDelta())
